--- a/app/src/main/res/layout/item_grid.xml
+++ b/app/src/main/res/layout/item_grid.xml
@@ -5,6 +5,15 @@
     android:layout_margin="0dp"
     android:padding="0dp">
 
+    <ImageView
+        android:id="@+id/appIcon"
+        android:paddingBottom="5dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleType="centerCrop"
+        android:contentDescription="" />
+
+
     <TextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
