--- a/app/src/main/res/layout/item_grid.xml
+++ b/app/src/main/res/layout/item_grid.xml
@@ -11,7 +11,8 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:scaleType="centerCrop"
-        android:contentDescription="" />
+        android:contentDescription=""
+        android:adjustViewBounds="true" />
 
 
     <TextView
