--- a/app/src/main/res/layout/item_grid.xml
+++ b/app/src/main/res/layout/item_grid.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
     android:layout_margin="0dp"
     android:padding="0dp">
 
     <ImageView
         android:id="@+id/appIcon"
-        android:paddingBottom="5dp"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:scaleType="centerCrop"
