--- a/app/src/main/res/layout/item_grid.xml
+++ b/app/src/main/res/layout/item_grid.xml
@@ -1,27 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="100dp"
+    android:layout_height="match_parent"
     android:layout_margin="0dp"
     android:padding="0dp">
-
-    <ImageView
-        android:id="@+id/appIcon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:scaleType="centerCrop"
-        android:contentDescription=""
-        android:adjustViewBounds="true" />
 
 
     <TextView
         android:id="@+id/text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="0dp"
-        android:gravity="center"
-        android:padding="0dp"
+        android:layout_alignBottom="@+id/appIcon"
+        android:gravity="bottom|center"
+        android:paddingBottom="8dp"
+        android:text="test"
         android:textColor="@android:color/white"
-        android:textSize="20sp" />
+        android:textSize="14sp" />
 
+    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/appIcon"
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:maxHeight="100dp"
+        android:paddingBottom="40dp"
+        android:paddingTop="20dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/appicon"
+        android:layout_centerInParent="true"
+        android:cropToPadding="false"
+        android:scaleType="centerInside" />
 </RelativeLayout>
