--- a/app/src/main/res/layout/group_picking.xml
+++ b/app/src/main/res/layout/group_picking.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/gName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Group Name:  "
+                android:text="@string/group_name"
                 android:textSize="18sp" />
 
             <EditText
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="textPersonName"
+                android:inputType="textCapWords"
                 android:selectAllOnFocus="false" />
 
             <ImageButton
