--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -17,34 +17,56 @@
 
     <SwitchPreference
         android:defaultValue="true"
-        android:key="example_switch"
-        android:summary="@string/pref_description_social_recommendations"
-        android:title="@string/pref_title_social_recommendations" />
+        android:key="lhs"
+        android:summary="Enable or Disable Left Activation Area"
+        android:title="Left Side Activation Area" />
 
-    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
-    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
-    <EditTextPreference
-        android:capitalize="words"
-        android:defaultValue="@string/pref_default_display_name"
-        android:inputType="textCapWords"
-        android:key="example_text"
-        android:maxLines="1"
-        android:selectAllOnFocus="true"
-        android:singleLine="true"
-        android:title="@string/pref_title_display_name" />
+    <SeekBarPreference
+        android:dependency="lhs"
+        android:key="lhsWidth"
+        android:title="Width of Left Area"
+        android:max="10"
+        android:defaultValue="3" />
 
-    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
-         dismiss it. -->
-    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
-    <ListPreference
-        android:defaultValue="-1"
-        android:entries="@array/pref_example_list_titles"
-        android:entryValues="@array/pref_example_list_values"
-        android:key="example_list"
-        android:negativeButtonText="@null"
-        android:positiveButtonText="@null"
-        android:title="@string/pref_title_add_friends_to_messages" />
+    <SeekBarPreference
+        android:dependency="lhs"
+        android:key="lhsHeight"
+        android:title="Height of Left Area"
+        android:max="100"
+        android:defaultValue="45" />
 
+    <SeekBarPreference
+        android:dependency="lhs"
+        android:key="lhsTransparency"
+        android:title="Transparency of Left Area"
+        android:max="255"
+        android:defaultValue="25" />
 
+    <SwitchPreference
+        android:defaultValue="true"
+        android:key="rhs"
+        android:summary="Enable or Disable Right Activation Area"
+        android:title="Right Side Activation Area" />
+
+    <SeekBarPreference
+        android:dependency="rhs"
+        android:key="rhsWidth"
+        android:title="Width of Right Area"
+        android:max="10"
+        android:defaultValue="3" />
+
+    <SeekBarPreference
+        android:dependency="rhs"
+        android:key="rhsHeight"
+        android:title="Height of Right Area"
+        android:max="100"
+        android:defaultValue="45" />
+
+    <SeekBarPreference
+        android:dependency="rhs"
+        android:key="rhsTransparency"
+        android:title="Transparency of Right Area"
+        android:max="255"
+        android:defaultValue="25" />
 
 </PreferenceScreen>
