--- a/app/src/main/res/xml/pref_group4.xml
+++ b/app/src/main/res/xml/pref_group4.xml
@@ -2,19 +2,17 @@
 
     <!-- A 'parent' preference, which enables/disables child preferences (below)
          when checked/unchecked. -->
-    <SwitchPreference
-        android:defaultValue="true"
-        android:key="group4Enabled"
-        android:title="@string/pref_groupEnabled" />
+    <EditTextPreference
+        android:defaultValue="Group 4"
+        android:key="groupName4"
+        android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:title="Group 4 Name: " />
 
-    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
-    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
-    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
-    <RingtonePreference
-        android:defaultValue="content://settings/system/notification_sound"
-        android:dependency="group4Enabled"
+    <Preference
         android:key="group4AppList"
-        android:ringtoneType="notification"
+        android:showDefault="true"
+        android:showSilent="true"
         android:title="@string/pref_groupAppsInGroup" />
 
 
