--- a/app/src/main/res/xml/pref_group7.xml
+++ b/app/src/main/res/xml/pref_group7.xml
@@ -9,6 +9,13 @@
         android:singleLine="true"
         android:title="Group 7 Name: " />
 
+    <ListPreference
+        android:defaultValue="Most Used"
+        android:entries="@array/sort_options"
+        android:entryValues="@array/sort_options"
+        android:key="sortG7"
+        android:title="Sorting Method for this Group" />
+
     <Preference
         android:key="group7AppList"
         android:showDefault="true"
