added icon picking per-group

--- a/app/src/main/res/xml/pref_group1.xml
+++ b/app/src/main/res/xml/pref_group1.xml
@@ -2,6 +2,13 @@
 
     <!-- A 'parent' preference, which enables/disables child preferences (below)
          when checked/unchecked. -->
+
+    <Preference
+        android:key="group1Icon"
+        android:showDefault="true"
+        android:showSilent="true"
+        android:title="Select icon for this Group"/>
+
     <EditTextPreference
         android:defaultValue="Group 1"
         android:key="groupName1"
