--- a/app/src/main/res/xml/pref_group3.xml
+++ b/app/src/main/res/xml/pref_group3.xml
@@ -2,6 +2,12 @@
 
     <!-- A 'parent' preference, which enables/disables child preferences (below)
          when checked/unchecked. -->
+    <Preference
+        android:key="group3Icon"
+        android:showDefault="true"
+        android:showSilent="true"
+        android:title="Select icon for this Group"/>
+
     <EditTextPreference
         android:defaultValue="Group 3"
         android:key="groupName3"
