--- a/app/src/main/res/drawable/ic_add_circle_black_40.xml
+++ b/app/src/main/res/drawable/ic_add_circle_black_40.xml
@@ -1,5 +1,5 @@
 <vector android:height="40dp" android:tint="#4CFFDE"
     android:viewportHeight="24.0" android:viewportWidth="24.0"
     android:width="40dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M12,17.27L18.18,21l-1.64,-7.03L22,9.24l-7.19,-0.61L12,2 9.19,8.63 2,9.24l5.46,4.73L5.82,21z"/>
+    <path android:fillColor="#FF000000" android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM17,13h-4v4h-2v-4L7,13v-2h4L11,7h2v4h4v2z"/>
 </vector>
