--- a/app/src/main/res/drawable/ic_brightness_3_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_brightness_3_black_24dp.xml
@@ -1,5 +1,5 @@
 <vector android:height="40dp" android:tint="#4CFFDE"
     android:viewportHeight="24.0" android:viewportWidth="24.0"
     android:width="40dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M12,17.27L18.18,21l-1.64,-7.03L22,9.24l-7.19,-0.61L12,2 9.19,8.63 2,9.24l5.46,4.73L5.82,21z"/>
+    <path android:fillColor="#FF000000" android:pathData="M9,2c-1.05,0 -2.05,0.16 -3,0.46 4.06,1.27 7,5.06 7,9.54 0,4.48 -2.94,8.27 -7,9.54 0.95,0.3 1.95,0.46 3,0.46 5.52,0 10,-4.48 10,-10S14.52,2 9,2z"/>
 </vector>
