--- a/app/src/main/res/drawable/ic_tune_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_tune_black_24dp.xml
@@ -1,5 +1,5 @@
 <vector android:height="40dp" android:tint="#4CFFDE"
     android:viewportHeight="24.0" android:viewportWidth="24.0"
     android:width="40dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M12,17.27L18.18,21l-1.64,-7.03L22,9.24l-7.19,-0.61L12,2 9.19,8.63 2,9.24l5.46,4.73L5.82,21z"/>
+    <path android:fillColor="#FF000000" android:pathData="M3,17v2h6v-2L3,17zM3,5v2h10L13,5L3,5zM13,21v-2h8v-2h-8v-2h-2v6h2zM7,9v2L3,11v2h4v2h2L9,9L7,9zM21,13v-2L11,11v2h10zM15,9h2L17,7h4L21,5h-4L17,3h-2v6z"/>
 </vector>
