--- a/app/src/main/res/layout/activity_grid_pick.xml
+++ b/app/src/main/res/layout/activity_grid_pick.xml
@@ -3,10 +3,10 @@
     android:id="@+id/gridview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gray_square"
     android:columnWidth="60dp"
-    android:numColumns="auto_fit"
-    android:verticalSpacing="10dp"
-    android:horizontalSpacing="10dp"
-    android:stretchMode="columnWidth"
     android:gravity="center"
-    />
+    android:horizontalSpacing="10dp"
+    android:numColumns="auto_fit"
+    android:stretchMode="columnWidth"
+    android:verticalSpacing="10dp" />
